@@ -1,5 +1,14 @@
 2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[pq int] Use ‘FINANGLE’, ‘UNFINANGLE’ more.
+
+	Omission from 2011-09-26, "Add abstractions
+	to grok Scheme symbol/string as C byte range".
+
+	* libpq.c (pg_mblen): Use ‘FINANGLE’, ‘UNFINANGLE’.
+
+2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[pq int] Construct ‘pg-guile-pg-loaded’ rv dynamically; reduce linking.
 
 	* libpq.c (goodies): Delete var.
